--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <form name="form-gabut">
                         <div class="form-floating pb-3">
                             <textarea class="form-control" name="pesan" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 200px" required></textarea>
-                            <label for="floatingTextarea2">Sampaikan Sesuatu Untuk Ku</label>
+                            <label for="floatingTextarea2">Tulis Sesuatau Di Bawah Sini</label>
                         </div>
                         <button type="submit" class="btn btn-primary btn-lg btn-kirim">Submit</button>
                         <button class="btn btn-primary btn-lg btn-loading d-none" type="button" disabled>
@@ -53,7 +53,7 @@
       <div class="row">
         <div class="col-md-4"></div>
         <div class="col-md-4 text-center">
-          <h4>Contact Me</h4>
+          <h4 class="contact">Contact Me</h4>
           <a href="https://wa.me/085280357433"><i class="fa-brands fa-whatsapp fa-2x m-2"></i></a>
           <a href="https://web.facebook.com/profile.php?id=100008691764112"><i class="fa-brands fa-facebook fa-2x m-2"></i></a>
           <a href="https://instagram.com/ulis_leu_sari?igshid=YmMyMTA2M2Y="><i class="fa-brands fa-instagram fa-2x m-2"></i></a>
@@ -90,6 +90,21 @@
           .catch(error => console.error('Error!', error.message))
       })
     </script>
+
+     <!-- GSAP -->
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
+ 
+     <script>
+       gsap.from('.text-success', {duration:1.5, y: '100%', opacity: 0, ease : "bounce.out"});
+       gsap.from('.form-floating', { duration: 2.5, delay: 1, ease: "back.out(1.7)", y: 100, opacity:0 });
+       gsap.from('.btn-kirim', { duration: 2.5, delay: 1, ease: "back.out(1.7)", x: -50, opacity:0 });
+       gsap.from('.navbar', {duration:1.5, y: '-100%', opacity: 0, ease : "bounce.out"});
+       gsap.from('.contact', {duration: 4, delay:2, x: -50, opacity: 0, ease: 'elastic.out(1, 0.3)'});
+       gsap.from('.fa-whatsapp', {duration: 4, delay:2.5, y: 30, opacity: 0, ease: 'elastic.out(1, 0.3)'});
+       gsap.from('.fa-facebook', {duration: 4, delay:2.7, y: 30, opacity: 0, ease: 'elastic.out(1, 0.3)'});
+       gsap.from('.fa-instagram', {duration: 4, delay:3, y: 30, opacity: 0, ease: 'elastic.out(1, 0.3)'});
+
+     </script>
 
 
     <!-- Option 2: Separate Popper and Bootstrap JS -->
