--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
                     <form name="form-gabut">
                         <div class="form-floating pb-3">
                             <textarea class="form-control" name="pesan" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 200px" required></textarea>
-                            <label for="floatingTextarea2">Tulis Sesuatau Di Bawah Sini</label>
+                            <label for="floatingTextarea2">Sampaikan Sesuatu Di Sini</label>
                         </div>
-                        <button type="submit" class="btn btn-primary btn-lg btn-kirim">Submit</button>
+                        <button type="submit" class="btn btn-primary btn-lg btn-kirim">Kirim</button>
                         <button class="btn btn-primary btn-lg btn-loading d-none" type="button" disabled>
                           <span class="spinner-border spinner-border-sm " role="status" aria-hidden="true"></span>
                           Loading...
