Update fitur munculkan list
Tampilkan list pesan

--- a/index.html
+++ b/index.html
@@ -1,240 +1,69 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+<html lang="id">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Buku Tamu</title>
+  <script>
+    const scriptURL = "YOUR_SCRIPT_URL"; // Ganti dengan URL Web App kamu
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="fontawesome/css/all.min.css" />
+    async function kirimPesan(e) {
+      e.preventDefault();
 
-    <title>Web Gabut</title>
-  </head>
-  <body>
-    <!-- Navbar -->
-    <nav
-      class="navbar navbar-expand-lg navbar-dark bg-dark shadow-lg fixed-top"
-    >
-      <div class="container">
-        <a class="navbar-brand" href="#"> Web Gabut</a>
-      </div>
-    </nav>
-    <!-- Akhir Navbar -->
+      let form = document.getElementById("formPesan");
+      let data = new FormData(form);
 
-    <div
-      class="container-fluid pt-5 pb-5"
-      style="
-        background: url(https://media.istockphoto.com/id/1283506462/photo/white-desk-office-with-laptop-smartphone-and-other-work-supplies-with-cup-of-coffee-top-view.jpg?b=1&s=170667a&w=0&k=20&c=Urxk_SoXDdV7ietMtbeOGRtZO54p7ZlbMDLFuJuYtr8=)
-          no-repeat center;
-        padding-top: 20%;
-        padding-bottom: 20%;
-        background-size: cover;
-      "
-    >
-      <div class="container pb-5 pt-5">
-        <div class="row">
-          <h4 class="text-center text-success pb-3">
-            <strong
-              >Yuk Tulis Sesuatu buat aku, Terserah apapun itu . Saran, kritik
-              atau curhat pun juga boleh nanti aku baca</strong
-            >
-          </h4>
-          <div class="col-md-2"></div>
-          <div class="col-md-8">
-            <!-- Alert -->
-            <div
-              class="alert alert-success alert-dismissible fade show d-none my-alert"
-              role="alert"
-            >
-              <strong>Terimah Kasih!</strong> Pesan Anda Telah Di Kirim
-              <button
-                type="button"
-                class="btn-close"
-                data-bs-dismiss="alert"
-                aria-label="Close"
-              ></button>
-            </div>
-            <!-- Akhir Alert -->
-            <form name="form-gabut">
-              <div class="form-floating pb-3">
-                <textarea
-                  class="form-control"
-                  name="pesan"
-                  placeholder="Leave a comment here"
-                  id="floatingTextarea2"
-                  style="height: 200px"
-                  required
-                ></textarea>
-                <label for="floatingTextarea2">Sampaikan Sesuatu Di Sini</label>
-              </div>
-              <button type="submit" class="btn btn-primary btn-lg btn-kirim">
-                Kirim
-              </button>
-              <button
-                class="btn btn-primary btn-lg btn-loading d-none"
-                type="button"
-                disabled
-              >
-                <span
-                  class="spinner-border spinner-border-sm"
-                  role="status"
-                  aria-hidden="true"
-                ></span>
-                Loading...
-              </button>
-            </form>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="container pt-4 pb-3">
-      <div class="row pesan-container">
-        <!-- pesan akan ditampilkan di sini -->
-      </div>
-      <div class="row">
-        <div class="col-md-4"></div>
-        <div class="col-md-4 text-center">
-          <h4 class="contact">Contact Me</h4>
-          <a href="https://wa.me/085280357433"
-            ><i class="fa-brands fa-whatsapp fa-2x m-2"></i
-          ></a>
-          <a href="https://web.facebook.com/profile.php?id=100008691764112"
-            ><i class="fa-brands fa-facebook fa-2x m-2"></i
-          ></a>
-          <a href="https://instagram.com/ulis_leu_sari?igshid=YmMyMTA2M2Y="
-            ><i class="fa-brands fa-instagram fa-2x m-2"></i
-          ></a>
-        </div>
-      </div>
-    </div>
-
-    <div class="container-fluid text-center pt-5 pb-5">
-      All Rights Reserved Ulis Sayang &copy; 2022
-    </div>
-
-    <script>
-      const scriptURL =
-        "https://script.google.com/macros/s/AKfycbyuoR-Xyogiyz7VMnb7882tnEcDjSJ3rtLePq3R5dQhULJAUiub-SAOdoWega0HncfSzA/exec";
-      const form = document.forms["form-gabut"];
-      const btnKirim = document.querySelector(".btn-kirim");
-      const btnLoading = document.querySelector(".btn-loading");
-      const myAlert = document.querySelector(".my-alert");
-      const pesanContainer = document.querySelector(".pesan-container");
-
-      form.addEventListener("submit", (e) => {
-        e.preventDefault();
-        btnLoading.classList.toggle("d-none");
-        btnKirim.classList.toggle("d-none");
-        fetch(scriptURL, { method: "POST", body: new FormData(form) })
-          .then((response) => {
-            btnLoading.classList.toggle("d-none");
-            btnKirim.classList.toggle("d-none");
-            myAlert.classList.toggle("d-none");
-            form.reset();
-            loadPesan(); // reload pesan setelah kirim
-            console.log("Success!", response);
-          })
-          .catch((error) => console.error("Error!", error.message));
-      });
-
-      async function loadPesan() {
-        try {
-          const res = await fetch(scriptURL);
-          const data = await res.json();
-          pesanContainer.innerHTML = "";
-          data.reverse().forEach((item) => {
-            const col = document.createElement("div");
-            col.className = "col-md-6 mb-3";
-            col.innerHTML = `
-              <div class="card shadow-sm p-3">
-                <p class="mb-1"><strong>${new Date(
-                  item.datetime
-                ).toLocaleString()}</strong></p>
-                <p>${item.pesan}</p>
-              </div>
-            `;
-            pesanContainer.appendChild(col);
-          });
-        } catch (err) {
-          console.error("Gagal ambil data:", err);
-          pesanContainer.innerHTML =
-            '<p class="text-danger">Gagal memuat pesan</p>';
-        }
+      try {
+        await fetch(scriptURL, { method: "POST", body: data });
+        form.reset();
+        loadPesan(); // reload pesan setelah kirim
+      } catch (error) {
+        console.error("Error!", error.message);
       }
+    }
 
-      // load pertama kali
+    async function loadPesan() {
+      try {
+        let response = await fetch(scriptURL);
+        let data = await response.json();
+
+        let container = document.getElementById("daftarPesan");
+        container.innerHTML = "";
+
+        data.reverse().forEach(item => {
+          let div = document.createElement("div");
+          div.classList.add("pesan");
+
+          div.innerHTML = `
+            <p><strong>${item.nama || "Anonim"}</strong> - ${
+              item.timestamp ? new Date(item.timestamp).toLocaleString() : ""
+            }</p>
+            <p>${item.pesan || ""}</p>
+            <hr>
+          `;
+
+          container.appendChild(div);
+        });
+      } catch (error) {
+        console.error("Gagal load pesan:", error);
+      }
+    }
+
+    document.addEventListener("DOMContentLoaded", function () {
+      document.getElementById("formPesan").addEventListener("submit", kirimPesan);
       loadPesan();
-    </script>
+    });
+  </script>
+</head>
+<body>
+  <h2>Buku Tamu</h2>
+  <form id="formPesan">
+    <input type="text" name="nama" placeholder="Nama" required><br><br>
+    <textarea name="pesan" placeholder="Tulis pesan..." required></textarea><br><br>
+    <button type="submit">Kirim</button>
+  </form>
 
-    <!-- GSAP -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
-    <script>
-      gsap.from(".text-success", {
-        duration: 1.5,
-        y: "100%",
-        opacity: 0,
-        ease: "bounce.out",
-      });
-      gsap.from(".form-floating", {
-        duration: 2.5,
-        delay: 1,
-        ease: "back.out(1.7)",
-        y: 100,
-        opacity: 0,
-      });
-      gsap.from(".btn-kirim", {
-        duration: 2.5,
-        delay: 1,
-        ease: "back.out(1.7)",
-        x: -50,
-        opacity: 0,
-      });
-      gsap.from(".navbar", {
-        duration: 1.5,
-        y: "-100%",
-        opacity: 0,
-        ease: "bounce.out",
-      });
-      gsap.from(".contact", {
-        duration: 4,
-        delay: 2,
-        x: -50,
-        opacity: 0,
-        ease: "elastic.out(1, 0.3)",
-      });
-      gsap.from(".fa-whatsapp", {
-        duration: 4,
-        delay: 2.5,
-        y: 30,
-        opacity: 0,
-        ease: "elastic.out(1, 0.3)",
-      });
-      gsap.from(".fa-facebook", {
-        duration: 4,
-        delay: 2.7,
-        y: 30,
-        opacity: 0,
-        ease: "elastic.out(1, 0.3)",
-      });
-      gsap.from(".fa-instagram", {
-        duration: 4,
-        delay: 3,
-        y: 30,
-        opacity: 0,
-        ease: "elastic.out(1, 0.3)",
-      });
-    </script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+  <h3>Daftar Pesan</h3>
+  <div id="daftarPesan"></div>
+</body>
 </html>
