--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -37,7 +36,7 @@
         <div class="row">
           <h4 class="text-center text-success pb-3">
             <strong
-              >Yuk Tulis Sesuatu buat aku, Terserah apapun itu . Saran, kritik
+              >Yuk Tulis Sesuatu buat aku, Terserah apapun itu. Saran, kritik
               atau curhat pun juga boleh nanti aku baca</strong
             >
           </h4>
@@ -150,10 +149,12 @@
             col.className = "col-md-6 mb-3";
             col.innerHTML = `
               <div class="card shadow-sm p-3">
-                <p class="mb-1"><strong>${new Date(
-                  item.datetime
-                ).toLocaleString()}</strong></p>
-                <p>${item.pesan}</p>
+                <p class="mb-1 text-muted"><small>${
+                  item.timestamp
+                    ? new Date(item.timestamp).toLocaleString()
+                    : ""
+                }</small></p>
+                <p>${item.pesan || ""}</p>
               </div>
             `;
             pesanContainer.appendChild(col);
