--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <title>Web Gabut</title>
 
-    <!-- Bootstrap & Icons via CDN (stabil buat GitHub Pages) -->
+    <!-- Bootstrap & Icons via CDN -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -43,16 +43,11 @@
       .danger-note {
         font-size: 0.9rem;
       }
-      .blur {
-        filter: blur(2px);
-      }
     </style>
   </head>
   <body>
     <!-- Navbar -->
-    <nav
-      class="navbar navbar-expand-lg navbar-dark bg-dark shadow-lg fixed-top"
-    >
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-lg fixed-top">
       <div class="container">
         <a class="navbar-brand" href="#">Web Gabut</a>
       </div>
@@ -64,8 +59,7 @@
         <div class="row">
           <h4 class="text-center text-success pb-3 text-success-animated">
             <strong>
-              Yuk tulis sesuatu buat aku — saran, kritik, atau curhat juga boleh
-              😉
+              Yuk tulis sesuatu buat aku — saran, kritik, atau curhat juga boleh 😉
             </strong>
           </h4>
           <div class="col-md-2"></div>
@@ -115,8 +109,7 @@
                 </button>
               </div>
               <p class="mt-2 mb-0 text-muted danger-note">
-                * Mohon tidak mengirim tautan berbahaya atau data pribadi
-                sensitif.
+                * Mohon tidak mengirim tautan berbahaya atau data pribadi sensitif.
               </p>
             </form>
           </div>
@@ -177,7 +170,7 @@
 
     <!-- ====== APP SCRIPT INTEGRATION ====== -->
     <script>
-      // Ganti hanya jika kamu deploy ulang Web App dan URL berubah
+      // Gunakan URL Web App dengan /exec
       const scriptURL =
         "https://script.google.com/macros/s/AKfycbyuoR-Xyogiyz7VMnb7882tnEcDjSJ3rtLePq3R5dQhULJAUiub-SAOdoWega0HncfSzA/exec";
 
@@ -188,7 +181,7 @@
       const pesanContainer = document.querySelector(".pesan-container");
       const reloadBtn = document.getElementById("reloadBtn");
 
-      // Helper: buat kartu pesan (aman dari XSS)
+      // Buat kartu pesan
       function createMessageCard(item) {
         const col = document.createElement("div");
         col.className = "col-md-6";
@@ -225,14 +218,11 @@
             body: new FormData(form),
           });
 
-          // Apps Script Web App balas JSON; res.ok biasanya true
           if (!res.ok) throw new Error("Response status: " + res.status);
 
-          // reset + alert
           form.reset();
           myAlert.classList.remove("d-none");
 
-          // reload daftar pesan
           await loadPesan();
         } catch (err) {
           console.error("Gagal kirim:", err);
@@ -245,30 +235,21 @@
 
       // Ambil pesan (GET)
       async function loadPesan() {
-        // tambahkan query ?t= untuk hindari cache
         const url = scriptURL + "?t=" + Date.now();
         try {
           const res = await fetch(url, { method: "GET" });
-          const json = await res.json(); // pastikan doGet mengembalikan JSON
+          const json = await res.json();
 
           pesanContainer.innerHTML = "";
 
-          if (
-            json.result === "success" &&
-            Array.isArray(json.data) &&
-            json.data.length > 0
-          ) {
-            // tampilkan terbaru di atas
+          if (json.result === "success" && Array.isArray(json.data) && json.data.length > 0) {
             json.data
               .slice()
               .reverse()
               .forEach((item) => {
                 pesanContainer.appendChild(createMessageCard(item));
               });
-          } else if (
-            json.result === "empty" ||
-            (json.result === "success" && json.data.length === 0)
-          ) {
+          } else if (json.result === "empty" || (json.result === "success" && json.data.length === 0)) {
             pesanContainer.innerHTML =
               '<p class="message-empty">Belum ada pesan.</p>';
           } else if (json.result === "error") {
@@ -276,7 +257,6 @@
             pesanContainer.innerHTML =
               '<p class="text-danger">Gagal memuat pesan (server).</p>';
           } else {
-            // Jika struktur tak terduga
             console.warn("Struktur tak terduga:", json);
             pesanContainer.innerHTML =
               '<p class="text-danger">Gagal memuat pesan (format tidak dikenali).</p>';
@@ -288,14 +268,13 @@
         }
       }
 
-      // Tombol reload
       reloadBtn.addEventListener("click", loadPesan);
 
       // Load awal
       loadPesan();
     </script>
 
-    <!-- GSAP Animations (opsional) -->
+    <!-- GSAP Animations -->
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
       crossorigin="anonymous"
