--- a/index.html
+++ b/index.html
@@ -1,66 +1,44 @@
 <!DOCTYPE html>
-<html lang="id">
+<html lang="en">
   <head>
+    <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="fontawesome/css/all.min.css" />
+
     <title>Web Gabut</title>
-
-    <!-- Bootstrap & Icons via CDN -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      crossorigin="anonymous"
-    />
-    <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
-      rel="stylesheet"
-      crossorigin="anonymous"
-    />
-
-    <style>
-      body {
-        background: #f7f8fa;
-      }
-      .card {
-        border: none;
-        border-radius: 1rem;
-      }
-      .navbar-brand {
-        font-weight: 700;
-      }
-      .hero {
-        background: url(https://images.unsplash.com/photo-1517694712202-14dd9538aa97?q=80&w=1200&auto=format&fit=crop)
-          center/cover no-repeat;
-      }
-      .message-empty {
-        color: #6c757d;
-      }
-      .footer {
-        background: #111;
-        color: #bbb;
-      }
-      .danger-note {
-        font-size: 0.9rem;
-      }
-    </style>
   </head>
   <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-lg fixed-top">
+    <nav
+      class="navbar navbar-expand-lg navbar-dark bg-dark shadow-lg fixed-top"
+    >
       <div class="container">
-        <a class="navbar-brand" href="#">Web Gabut</a>
+        <a class="navbar-brand" href="#"> Web Gabut</a>
       </div>
     </nav>
+    <!-- Akhir Navbar -->
 
-    <!-- Hero + Form -->
-    <section class="hero container-fluid pt-5 pb-5" style="padding-top: 7rem">
+    <div
+      class="container-fluid pt-5 pb-5"
+      style="
+        background: url(https://media.istockphoto.com/id/1283506462/photo/white-desk-office-with-laptop-smartphone-and-other-work-supplies-with-cup-of-coffee-top-view.jpg?b=1&s=170667a&w=0&k=20&c=Urxk_SoXDdV7ietMtbeOGRtZO54p7ZlbMDLFuJuYtr8=)
+          no-repeat center;
+        padding-top: 20%;
+        padding-bottom: 20%;
+        background-size: cover;
+      "
+    >
       <div class="container pb-5 pt-5">
         <div class="row">
-          <h4 class="text-center text-success pb-3 text-success-animated">
-            <strong>
-              Yuk tulis sesuatu buat aku — saran, kritik, atau curhat juga boleh 😉
-            </strong>
+          <h4 class="text-center text-success pb-3">
+            <strong
+              >Yuk Tulis Sesuatu buat aku, Terserah apapun itu . Saran, kritik
+              atau curhat pun juga boleh nanti aku baca</strong
+            >
           </h4>
           <div class="col-md-2"></div>
           <div class="col-md-8">
@@ -69,7 +47,7 @@
               class="alert alert-success alert-dismissible fade show d-none my-alert"
               role="alert"
             >
-              <strong>Terima kasih!</strong> Pesan Anda telah dikirim.
+              <strong>Terimah Kasih!</strong> Pesan Anda Telah Di Kirim
               <button
                 type="button"
                 class="btn-close"
@@ -77,239 +55,161 @@
                 aria-label="Close"
               ></button>
             </div>
-
-            <!-- Form -->
-            <form name="form-gabut" class="card shadow p-3">
-              <div class="form-floating pb-3 form-floating-animated">
+            <!-- Akhir Alert -->
+            <form name="form-gabut">
+              <div class="form-floating pb-3">
                 <textarea
                   class="form-control"
                   name="pesan"
-                  placeholder="Tulis sesuatu di sini…"
+                  placeholder="Leave a comment here"
                   id="floatingTextarea2"
-                  style="height: 180px"
+                  style="height: 200px"
                   required
                 ></textarea>
-                <label for="floatingTextarea2">Sampaikan sesuatu di sini</label>
+                <label for="floatingTextarea2">Sampaikan Sesuatu Di Sini</label>
               </div>
-              <div class="d-flex gap-2">
-                <button type="submit" class="btn btn-primary btn-lg btn-kirim">
-                  Kirim
-                </button>
-                <button
-                  class="btn btn-primary btn-lg btn-loading d-none"
-                  type="button"
-                  disabled
-                >
-                  <span
-                    class="spinner-border spinner-border-sm"
-                    role="status"
-                    aria-hidden="true"
-                  ></span>
-                  Loading...
-                </button>
-              </div>
-              <p class="mt-2 mb-0 text-muted danger-note">
-                * Mohon tidak mengirim tautan berbahaya atau data pribadi sensitif.
-              </p>
+              <button type="submit" class="btn btn-primary btn-lg btn-kirim">
+                Kirim
+              </button>
+              <button
+                class="btn btn-primary btn-lg btn-loading d-none"
+                type="button"
+                disabled
+              >
+                <span
+                  class="spinner-border spinner-border-sm"
+                  role="status"
+                  aria-hidden="true"
+                ></span>
+                Loading...
+              </button>
             </form>
           </div>
         </div>
       </div>
-    </section>
+    </div>
 
-    <!-- List Pesan -->
-    <section class="container pt-4 pb-5">
-      <h5 class="mb-3">Pesan Terbaru</h5>
-      <div class="row g-3 pesan-container">
-        <!-- pesan akan ditampilkan di sini -->
-      </div>
-      <div class="text-center mt-3">
-        <button id="reloadBtn" class="btn btn-outline-secondary btn-sm">
-          Muat Ulang
-        </button>
-      </div>
-    </section>
-
-    <!-- Contact -->
-    <section class="container pb-4">
+    <div class="container pt-4 pb-3">
       <div class="row">
         <div class="col-md-4"></div>
         <div class="col-md-4 text-center">
           <h4 class="contact">Contact Me</h4>
-          <div class="d-flex justify-content-center">
-            <a
-              class="text-decoration-none"
-              href="https://wa.me/085280357433"
-              aria-label="WhatsApp"
-            >
-              <i class="fa-brands fa-whatsapp fa-2x m-2"></i>
-            </a>
-            <a
-              class="text-decoration-none"
-              href="https://web.facebook.com/profile.php?id=100008691764112"
-              aria-label="Facebook"
-            >
-              <i class="fa-brands fa-facebook fa-2x m-2"></i>
-            </a>
-            <a
-              class="text-decoration-none"
-              href="https://instagram.com/ulis_leu_sari?igshid=YmMyMTA2M2Y="
-              aria-label="Instagram"
-            >
-              <i class="fa-brands fa-instagram fa-2x m-2"></i>
-            </a>
-          </div>
+          <a href="https://wa.me/085280357433"
+            ><i class="fa-brands fa-whatsapp fa-2x m-2"></i
+          ></a>
+          <a href="https://web.facebook.com/profile.php?id=100008691764112"
+            ><i class="fa-brands fa-facebook fa-2x m-2"></i
+          ></a>
+          <a href="https://instagram.com/ulis_leu_sari?igshid=YmMyMTA2M2Y="
+            ><i class="fa-brands fa-instagram fa-2x m-2"></i
+          ></a>
         </div>
       </div>
-    </section>
+    </div>
 
-    <!-- Footer -->
-    <footer class="container-fluid text-center pt-5 pb-5 footer">
+    <div class="container-fluid text-center pt-5 pb-5">
       All Rights Reserved Ulis Sayang &copy; 2022
-    </footer>
+    </div>
 
-    <!-- ====== APP SCRIPT INTEGRATION ====== -->
     <script>
-      // Gunakan URL Web App dengan /exec
       const scriptURL =
         "https://script.google.com/macros/s/AKfycbyuoR-Xyogiyz7VMnb7882tnEcDjSJ3rtLePq3R5dQhULJAUiub-SAOdoWega0HncfSzA/exec";
-
       const form = document.forms["form-gabut"];
       const btnKirim = document.querySelector(".btn-kirim");
       const btnLoading = document.querySelector(".btn-loading");
       const myAlert = document.querySelector(".my-alert");
-      const pesanContainer = document.querySelector(".pesan-container");
-      const reloadBtn = document.getElementById("reloadBtn");
 
-      // Buat kartu pesan
-      function createMessageCard(item) {
-        const col = document.createElement("div");
-        col.className = "col-md-6";
-
-        const card = document.createElement("div");
-        card.className = "card shadow-sm p-3";
-
-        const ts = document.createElement("p");
-        ts.className = "mb-1 text-muted";
-        const small = document.createElement("small");
-        small.textContent = item.timestamp
-          ? new Date(item.timestamp).toLocaleString("id-ID")
-          : "";
-        ts.appendChild(small);
-
-        const msg = document.createElement("p");
-        msg.textContent = item.pesan || "";
-
-        card.appendChild(ts);
-        card.appendChild(msg);
-        col.appendChild(card);
-        return col;
-      }
-
-      // Kirim pesan (POST)
-      form.addEventListener("submit", async (e) => {
+      form.addEventListener("submit", (e) => {
         e.preventDefault();
-        btnLoading.classList.remove("d-none");
-        btnKirim.classList.add("d-none");
-
-        try {
-          const res = await fetch(scriptURL, {
-            method: "POST",
-            body: new FormData(form),
-          });
-
-          if (!res.ok) throw new Error("Response status: " + res.status);
-
-          form.reset();
-          myAlert.classList.remove("d-none");
-
-          await loadPesan();
-        } catch (err) {
-          console.error("Gagal kirim:", err);
-          alert("Gagal kirim pesan. Cek koneksi atau izin Web App.");
-        } finally {
-          btnLoading.classList.add("d-none");
-          btnKirim.classList.remove("d-none");
-        }
+        // ketika tombol submit di klik
+        // tampilkan tombol loading hilangkan tombol kirim
+        btnLoading.classList.toggle("d-none");
+        btnKirim.classList.toggle("d-none");
+        fetch(scriptURL, { method: "POST", body: new FormData(form) })
+          .then((response) => {
+            // tampilkan tombol kirim hilangkan tombol loading
+            btnLoading.classList.toggle("d-none");
+            btnKirim.classList.toggle("d-none");
+            // tampilkan alert
+            myAlert.classList.toggle("d-none");
+            // reset form
+            form.reset();
+            console.log("Success!", response);
+          })
+          .catch((error) => console.error("Error!", error.message));
       });
-
-      // Ambil pesan (GET)
-      async function loadPesan() {
-        const url = scriptURL + "?t=" + Date.now();
-        try {
-          const res = await fetch(url, { method: "GET" });
-          const json = await res.json();
-
-          pesanContainer.innerHTML = "";
-
-          if (json.result === "success" && Array.isArray(json.data) && json.data.length > 0) {
-            json.data
-              .slice()
-              .reverse()
-              .forEach((item) => {
-                pesanContainer.appendChild(createMessageCard(item));
-              });
-          } else if (json.result === "empty" || (json.result === "success" && json.data.length === 0)) {
-            pesanContainer.innerHTML =
-              '<p class="message-empty">Belum ada pesan.</p>';
-          } else if (json.result === "error") {
-            console.error("Error dari server:", json.message);
-            pesanContainer.innerHTML =
-              '<p class="text-danger">Gagal memuat pesan (server).</p>';
-          } else {
-            console.warn("Struktur tak terduga:", json);
-            pesanContainer.innerHTML =
-              '<p class="text-danger">Gagal memuat pesan (format tidak dikenali).</p>';
-          }
-        } catch (err) {
-          console.error("Gagal ambil data:", err);
-          pesanContainer.innerHTML =
-            '<p class="text-danger">Gagal memuat pesan (jaringan/izin).</p>';
-        }
-      }
-
-      reloadBtn.addEventListener("click", loadPesan);
-
-      // Load awal
-      loadPesan();
     </script>
 
-    <!-- GSAP Animations -->
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
-      crossorigin="anonymous"
-    ></script>
+    <!-- GSAP -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
+
     <script>
-      gsap.from(".text-success-animated", {
-        duration: 1.2,
-        y: 30,
+      gsap.from(".text-success", {
+        duration: 1.5,
+        y: "100%",
         opacity: 0,
-        ease: "power3.out",
+        ease: "bounce.out",
       });
-      gsap.from(".form-floating-animated", {
-        duration: 1.2,
-        delay: 0.3,
-        y: 24,
+      gsap.from(".form-floating", {
+        duration: 2.5,
+        delay: 1,
+        ease: "back.out(1.7)",
+        y: 100,
         opacity: 0,
-        ease: "power3.out",
+      });
+      gsap.from(".btn-kirim", {
+        duration: 2.5,
+        delay: 1,
+        ease: "back.out(1.7)",
+        x: -50,
+        opacity: 0,
       });
       gsap.from(".navbar", {
-        duration: 0.9,
-        y: -50,
+        duration: 1.5,
+        y: "-100%",
         opacity: 0,
-        ease: "power2.out",
+        ease: "bounce.out",
       });
       gsap.from(".contact", {
-        duration: 1,
-        delay: 0.4,
+        duration: 4,
+        delay: 2,
+        x: -50,
         opacity: 0,
-        ease: "power2.out",
+        ease: "elastic.out(1, 0.3)",
+      });
+      gsap.from(".fa-whatsapp", {
+        duration: 4,
+        delay: 2.5,
+        y: 30,
+        opacity: 0,
+        ease: "elastic.out(1, 0.3)",
+      });
+      gsap.from(".fa-facebook", {
+        duration: 4,
+        delay: 2.7,
+        y: 30,
+        opacity: 0,
+        ease: "elastic.out(1, 0.3)",
+      });
+      gsap.from(".fa-instagram", {
+        duration: 4,
+        delay: 3,
+        y: 30,
+        opacity: 0,
+        ease: "elastic.out(1, 0.3)",
       });
     </script>
 
-    <!-- Bootstrap JS bundle -->
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+
     <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+      integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+      integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
       crossorigin="anonymous"
     ></script>
   </body>
