--- a/index.html
+++ b/index.html
@@ -1,14 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" />
     <link rel="stylesheet" href="fontawesome/css/all.min.css" />
-
     <title>Web Gabut</title>
   </head>
   <body>
@@ -35,10 +31,10 @@
       <div class="container pb-5 pt-5">
         <div class="row">
           <h4 class="text-center text-success pb-3">
-            <strong
-              >Yuk Tulis Sesuatu buat aku, Terserah apapun itu . Saran, kritik
-              atau curhat pun juga boleh nanti aku baca</strong
-            >
+            <strong>
+              Yuk Tulis Sesuatu buat aku, Terserah apapun itu. Saran, kritik
+              atau curhat pun juga boleh nanti aku baca
+            </strong>
           </h4>
           <div class="col-md-2"></div>
           <div class="col-md-8">
@@ -47,7 +43,7 @@
               class="alert alert-success alert-dismissible fade show d-none my-alert"
               role="alert"
             >
-              <strong>Terimah Kasih!</strong> Pesan Anda Telah Di Kirim
+              <strong>Terima Kasih!</strong> Pesan Anda Telah Dikirim
               <button
                 type="button"
                 class="btn-close"
@@ -89,6 +85,17 @@
       </div>
     </div>
 
+    <!-- Section untuk menampilkan pesan -->
+    <div class="container pt-4 pb-5">
+      <h3 class="text-center mb-4">Daftar Pesan</h3>
+      <div id="list-pesan">
+        <!-- Pesan dari Spreadsheet akan tampil di sini -->
+      </div>
+      <nav>
+        <ul class="pagination justify-content-center" id="pagination"></ul>
+      </nav>
+    </div>
+
     <div class="container pt-4 pb-3">
       <div class="row">
         <div class="col-md-4"></div>
@@ -113,31 +120,106 @@
 
     <script>
       const scriptURL =
-        "https://script.google.com/macros/s/AKfycbyuoR-Xyogiyz7VMnb7882tnEcDjSJ3rtLePq3R5dQhULJAUiub-SAOdoWega0HncfSzA/exec";
+        "https://script.google.com/macros/s/AKfycbx12WYRFkooHF1xxPnLJjgJqHkC1DwxnG1JV17aWUhPQ-Roj6-abBtYsS1dO4V32LC36Q/exec";
+
       const form = document.forms["form-gabut"];
       const btnKirim = document.querySelector(".btn-kirim");
       const btnLoading = document.querySelector(".btn-loading");
       const myAlert = document.querySelector(".my-alert");
+      const listPesan = document.getElementById("list-pesan");
+      const paginationEl = document.getElementById("pagination");
+
+      let currentPage = 1;
+      const pageSize = 5; // jumlah pesan per halaman
+      let messages = [];
 
       form.addEventListener("submit", (e) => {
         e.preventDefault();
-        // ketika tombol submit di klik
-        // tampilkan tombol loading hilangkan tombol kirim
         btnLoading.classList.toggle("d-none");
         btnKirim.classList.toggle("d-none");
         fetch(scriptURL, { method: "POST", body: new FormData(form) })
           .then((response) => {
-            // tampilkan tombol kirim hilangkan tombol loading
             btnLoading.classList.toggle("d-none");
             btnKirim.classList.toggle("d-none");
-            // tampilkan alert
-            myAlert.classList.toggle("d-none");
-            // reset form
+            myAlert.classList.remove("d-none");
             form.reset();
-            console.log("Success!", response);
+            loadPesan();
           })
           .catch((error) => console.error("Error!", error.message));
       });
+
+      function renderPagination() {
+        const totalPages = Math.ceil(messages.length / pageSize);
+        let html = "";
+
+        for (let i = 1; i <= totalPages; i++) {
+          html += `<li class="page-item ${
+            i === currentPage ? "active" : ""
+          }"><a class="page-link" href="#">${i}</a></li>`;
+        }
+        paginationEl.innerHTML = html;
+
+        // add click event
+        const links = paginationEl.querySelectorAll("a");
+        links.forEach((link, index) => {
+          link.addEventListener("click", (e) => {
+            e.preventDefault();
+            currentPage = index + 1;
+            displayMessages();
+          });
+        });
+      }
+
+      function displayMessages() {
+        const start = (currentPage - 1) * pageSize;
+        const end = start + pageSize;
+        const pageMessages = messages.slice(start, end);
+
+        if (pageMessages.length === 0) {
+          listPesan.innerHTML =
+            '<p class="text-center text-muted">Belum ada pesan...</p>';
+          return;
+        }
+
+        listPesan.innerHTML = "";
+        pageMessages.forEach((item) => {
+          const pesan = item.pesan ? item.pesan : "(Pesan kosong)";
+          const waktu = item.timestamp
+            ? new Date(item.timestamp).toLocaleString()
+            : "-";
+          const card = `
+            <div class="card shadow-sm mb-3">
+              <div class="card-body">
+                <p class="card-text">${pesan}</p>
+                <small class="text-muted">${waktu}</small>
+              </div>
+            </div>`;
+          listPesan.innerHTML += card;
+        });
+      }
+
+      function loadPesan() {
+        fetch(scriptURL)
+          .then((res) => res.json())
+          .then((json) => {
+            if (json.result === "success" && json.data.length > 0) {
+              messages = json.data.reverse();
+              displayMessages();
+              renderPagination();
+            } else {
+              listPesan.innerHTML =
+                '<p class="text-center text-muted">Belum ada pesan...</p>';
+              paginationEl.innerHTML = "";
+            }
+          })
+          .catch((err) => {
+            console.error("Gagal ambil data:", err);
+            listPesan.innerHTML =
+              '<p class="text-center text-danger">Error mengambil data!</p>';
+          });
+      }
+
+      loadPesan();
     </script>
 
     <!-- GSAP -->
@@ -200,16 +282,12 @@
       });
     </script>
 
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-      integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
       crossorigin="anonymous"
     ></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-      integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
       crossorigin="anonymous"
     ></script>
   </body>
